--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "lucide-react": "^0.441.0",
     "next": "14.2.11",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-facebook-pixel": "^1.0.4"
   },
   "devDependencies": {
     "@types/node": "^20.16.5",
